# demowebshop

./: env_example  pyproject.toml
data/: products.py  users.py
demowebshop/model/: one_entry_point.py
demowebshop/model/pages/: AccountPage.py  BooksPage.py  CartPage.py  MainPage.py
tests/: conftest.py  test_demowebshop.py
utils/: base_session.py
