[tool.poetry]
name = "demowebshop"
version = "0.1.0"
description = ""
authors = ["Aleksei <trrskv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = "^2.0.0b16"
pytest = "^7.2.1"
python-dotenv = "^0.21.1"
allure-pytest = "^2.12.0"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
